--- a/src/app.css
+++ b/src/app.css
@@ -45,6 +45,8 @@
   }
 }
 
+.reportes-vista-tabla-card div { padding: 0  !important;border:1px solid #fff}
+
 /* Custom styles */
 body {
   @apply bg-gray-50;
